# loco

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: docs.yml  loco-gen-ci.yml  loco-gen-deploy.yml  loco-new.yml  loco-rs-ci-sanity.yml  loco-rs-ci.yml
docs-site/content/docs/processing/: agents.md  cable.md  workers.md
docs-site/content/docs/the-app/: controller.md
loco-gen/: Cargo.toml
loco-gen/src/: agent.rs  lib.rs  template.rs
loco-gen/src/templates/agent/: 0_agents_mod.t  agent_hooks.t  agent_mod.t  agent_tools.t  agents_runtime.t  agents_store.t  controller.t  migration.t
loco-gen/src/templates/channel/: channel.t
loco-gen/tests/templates/: agent.rs  mod.rs
loco-gen/tests/templates/snapshots/: generate[agent_dir_hooks]@agent.snap  generate[agent_dir_mod]@agent.snap  generate[agent_dir_tools]@agent.snap  generate[agents_mod]@agent.snap  generate[agents_runtime]@agent.snap  generate[agents_store]@agent.snap  generate[controller_file]@agent.snap  generate[migration_file]@agent.snap  generate_results@agent.snap  inject[app_rs]@agent.snap  inject[controller_mod_rs]@agent.snap  inject[lib_rs]@agent.snap  inject[migration_lib]@agent.snap
loco-new/: Cargo.toml  setup.rhai
loco-new/base_template/src/: app.rs.t  lib.rs.t
loco-new/base_template/src/tasks/: user_create.rs
loco-new/src/: wizard.rs
loco-new/src/generator/: mod.rs  template.rs
loco-new/tests/templates/snapshots/: r#mod__templates__auth__src_app_rs_auth_false_None.snap  r#mod__templates__auth__src_app_rs_auth_false_Sqlite.snap  r#mod__templates__auth__src_app_rs_auth_true_None.snap  r#mod__templates__auth__src_app_rs_auth_true_Sqlite.snap  r#mod__templates__background__src_app_rs_Queue.snap  r#mod__templates__db__cargo_dependencies_Sqlite.snap  r#mod__templates__db__src_app_rs_None.snap  r#mod__templates__db__src_app_rs_Sqlite.snap  r#mod__templates__initializers__src_app_rs_with_initializers.snap  r#mod__templates__initializers__src_app_rs_without_initializers.snap
loco-new/tests/wizard/: new.rs
src/: app.rs  boot.rs  cli.rs  config.rs  db.rs  hash.rs  lib.rs  logger.rs  metrics.rs  prelude.rs  schema.rs  server_info.rs
src/agui/: agent.rs  artifact.rs  context.rs  context_tool.rs  controller.rs  entities.rs  eval.rs  guardrail.rs  hub.rs  interact.rs  memory.rs  mod.rs  protocol.rs  provider.rs  runtime.rs  scope.rs  service.rs  state_tool.rs  store.rs  subagent.rs  tool.rs  transport.rs  worker.rs  workflow.rs
src/auth/snapshots/: loco_rs__auth__jwt__tests__valid token and custom array claims.snap  loco_rs__auth__jwt__tests__valid token and custom boolean claims.snap  loco_rs__auth__jwt__tests__valid token and custom nested array claims.snap  loco_rs__auth__jwt__tests__valid token and custom nested claims.snap  loco_rs__auth__jwt__tests__valid token and custom number claims.snap  loco_rs__auth__jwt__tests__valid token and custom string claims.snap  loco_rs__auth__jwt__tests__valid token.snap
src/bgworker/: mod.rs  pg.rs  redis.rs  sqlt.rs
src/cable/: channel.rs  inmem.rs  mod.rs  pg.rs  pgmq.rs  pubsub.rs  redis.rs  sqlt.rs  tests.rs  transport.rs
src/controller/: monitoring.rs
src/controller/middleware/: limit_payload.rs
src/controller/snapshots/: loco_rs__controller__app_routes__tests__[[slash]_metrics].snap  loco_rs__controller__app_routes__tests__[[slash]_server].snap
src/controller/views/tera_builtins/filters/: number.rs
src/metrics/: http.rs  mod.rs  otel.rs  runtime.rs
src/model/query/dsl/: mod.rs
src/storage/: mod.rs  stream.rs
src/storage/drivers/: mod.rs  opendal_adapter.rs
src/testing/: db.rs  request.rs
src/tests_cfg/: app.rs  config.rs  db.rs
tests/: mod.rs
tests/cable/: common.rs  inmem.rs  mod.rs  pg.rs  redis.rs  sqlt.rs
xtask/: Cargo.toml
