[workspace]
members = ["xtask", "loco-gen"]
exclude = ["starters"]

[workspace.package]
edition = "2021"
rust-version = "1.95"
license = "Apache-2.0"

[package]
name = "loco-rs"
version = "0.16.4"
description = "The one-person framework for Rust"
homepage = "https://loco.rs/"
documentation = "https://docs.rs/loco-rs"
repository = "https://github.com/loco-rs/loco"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "auth_jwt",
    "cli",
    "with-db",
    "cache_inmem",
    "bg_redis",
    "bg_pg",
    "bg_sqlt",
    "cable_redis",
    "cable_pg",
    "cable_sqlt",
    "cable_pgmq",
]
auth_jwt = ["dep:jsonwebtoken"]
cli = ["dep:clap"]
testing = ["dep:axum-test", "dep:scraper", "dep:tree-fs"]
with-db = [
    "dep:sea-orm",
    "dep:sea-orm-migration",
    "dep:sea-schema",
    "dep:sqlx",
    "loco-gen/with-db",
]
# Storage features
all_storage = ["storage_aws_s3", "storage_azure", "storage_gcp"]
storage_aws_s3 = ["opendal/services-s3"]
storage_azure = ["opendal/services-azblob"]
storage_gcp = ["opendal/services-gcs"]
# Cache feature
cache_inmem = ["dep:moka"]
cache_redis = ["dep:bb8-redis", "dep:bb8"]
bg_redis = ["dep:redis"]
bg_pg = ["dep:sqlx"]
bg_sqlt = ["dep:sqlx"]
# Realtime cable (pub/sub for WebSocket / SSE)
cable_redis = ["dep:redis"]
cable_pg = ["dep:sqlx"]
cable_sqlt = ["dep:sqlx"]
cable_pgmq = ["dep:sqlx", "dep:pgmq"]
# AG-UI streaming agent runtime (LLM agents over SSE). Off by default.
agui = ["dep:reqwest", "tokio/sync", "tokio/rt", "tokio/macros", "tokio/time"]
## Testing feature flags
integration_test = []
# Embed assets into binary
embedded_assets = []

[dependencies]
loco-gen = { version = "0.16.1", path = "./loco-gen" }
backtrace_printer = { version = "1.3.0" }

# cli
clap = { version = "4.6", features = ["derive"], optional = true }
colored = { workspace = true }
sea-orm = { version = "2.0.0-rc.19", features = [
    "sqlx-postgres",        # `DATABASE_DRIVER` feature
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
], optional = true }
# Transitive pin (pulled via sea-orm-migration, not used directly). sea-orm
# rc.41's `sea_schema_shim` implements `sea_schema::Connection` with `?Send`,
# which only matches sea-schema 0.18.0's trait; 0.18.1 made the trait `Send`
# under sqlx, so the shim fails to compile on newer rustc. Pin to 0.18.0.
sea-schema = { version = "=0.18.0", optional = true }

tokio = { version = "1.52", default-features = false }
tokio-util = "0.7"
# the rest

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
serde_variant = "0.1.3"
toml = "1.1"

async-trait = { workspace = true }

axum = { workspace = true }
axum-extra = { version = "0.10.3", features = ["cookie"] }
regex = { workspace = true }
# mailer
tera = { workspace = true }
heck = { workspace = true }
cruet = "0.13"
lettre = { version = "0.11.21", default-features = false, features = [
    "builder",
    "hostname",
    "smtp-transport",
    "tokio1-rustls-tls",
] }
include_dir = "0.7.4"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
    "env-filter",
    "json",
    "ansi",
] }
tracing-appender = { version = "0.2.5", default-features = false }

duct = { workspace = true }
duct_sh = { version = "1.0.0" }

tower-http = { workspace = true }
byte-unit = "5.2"

argon2 = { version = "0.5", features = ["std"] }
rand = { version = "0.9", features = ["std"] }
jsonwebtoken = { version = "10.3", optional = true }
validator = { version = "0.20.0", features = ["derive"] }
futures-util = "0.3"
tower = { workspace = true }
bytes = "1.11"
ipnetwork = "0.21"
semver = "1"

axum-test = { version = "17.0.1", optional = true }
tree-fs = { version = "0.3", optional = true }

chrono = { workspace = true }

uuid = { version = "1.23", features = ["v4", "fast-rng"] }

# File Upload
opendal = { version = "0.56", default-features = false, features = [
    "services-memory",
    "services-fs",
    "layers-retry",
] }

# cache
moka = { version = "0.12.15", features = ["sync"], optional = true }
bb8-redis = { version = "0.26", optional = true }
bb8 = { version = "0.9", optional = true }

# Scheduler
tokio-cron-scheduler = { version = "0.15", features = ["signal"] }
english-to-cron = { version = "0.1.7" }

# bg_sqlt: sqlite workers
# bg_pg: postgres workers
sqlx = { version = "0.8.6", default-features = false, features = [
    "json",
    "postgres",
    "chrono",
    "sqlite",
], optional = true }
ulid = { version = "1" }

# bg_redis: redis workers
redis = { version = "1.2", features = ["aio", "tokio-comp"], optional = true }

# cable_pgmq: PostgreSQL Message Queue backend for realtime cable
pgmq = { version = "0.33", optional = true }

scraper = { version = "0.25.0", features = ["deterministic"], optional = true }

# agui: HTTP client for the OpenAI-compatible LLM provider (SSE streaming)
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
], optional = true }

dashmap = "6"
notify = "8.2"

[workspace.dependencies]
tera = { version = "1.20.1" }
colored = { version = "3.1" }
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1.44"
regex = "1.12"
thiserror = "2"
serde = "1"
serde_json = "1"
async-trait = { version = "0.1.89" }
axum = { version = "0.8.9", features = ["macros", "multipart", "ws"] }
tower = "0.5"
tower-http = { version = "0.6.8", features = [
    "trace",
    "catch-panic",
    "timeout",
    "add-extension",
    "cors",
    "fs",
    "set-header",
    "compression-full",
] }
heck = "0.5"
duct = { version = "1.1" }

[dependencies.sea-orm-migration]
optional = true
version = "2.0.0-rc.19"
features = [
    # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
    # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
    # e.g.
    "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
    "sqlx-postgres",        # `DATABASE_DRIVER` feature
    "sqlx-sqlite",
]

[package.metadata.docs.rs]
features = ["testing"]

[dev-dependencies]
loco-rs = { path = ".", features = ["testing"] }
rstest = "0.26"
insta = { version = "1.47", features = ["redactions", "yaml", "filters"] }
tree-fs = { version = "0.3" }
reqwest = { version = "0.12.28", features = ["json", "stream"] }
tower = { workspace = true, features = ["util"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "macros",
    "json",
    "postgres",
    "chrono",
    "sqlite",
    "migrate",
] }
testcontainers = { version = "0.27" }
tokio-tungstenite = "0.27"
