[workspace]

[package]
name = "loco"
version = "0.16.3"
edition = "2021"
description = "Loco new app generator"
license = "Apache-2.0"
homepage = "https://docs.rs/loco"
documentation = "https://docs.rs/loco"
readme = "README.md"
include = ["src/**", "base_template/**", "Cargo.toml", "setup.rhai"]

[features]
test-wizard = []

[profile.release]
strip = true

[[bin]]
name = "loco"
path = "src/bin/main.rs"
required-features = []


[dependencies]
thiserror = { version = "2" }
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
heck = { version = "0.5.0" }
dialoguer = "0.12.0"
strum = { version = "0.28", features = ["derive"] }
unicode-xid = { version = "0.2.6" }
rhai = { version = "1.25" }
include_dir = { version = "0.7.4" }
fs_extra = { version = "1.3.0" }
walkdir = { version = "2.5.0" }
# NOTE: tera pinned to 1.x for now; 2.0 changes filter/Value APIs and template
# behavior that would need the base_template rendering to be re-validated.
tera = { version = "1.20.0" }
colored = { version = "3" }
duct = { version = "1.1" }
rand = { version = "0.10" }
tree-fs = { version = "0.3" }

[dev-dependencies]
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
serde_yaml = { version = "0.9" }
insta = { version = "1.41.1", features = ["redactions", "yaml", "filters"] }
rstest = { version = "0.26.0" }
mockall = "0.15.0"
toml = "1.1"
regex = "1.11.1"
