[package]
name = "xtask"
version = "0.2.0"
edition = "2021"

[lib]
name = "xtask"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/bin/main.rs"
required-features = []

[dependencies]
clap = { version = "4.6", features = ["derive"] }
eyre = "0.6"
duct = { workspace = true }
cargo_metadata = "0.23"
requestty = "0.6"
regex = { version = "1.12" }
thiserror = "2"
tabled = "0.20"
colored = { version = "3.1" }

[dev-dependencies]
